--- a/example/build.gradle
+++ b/example/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     compile 'se.emilsjolander:stickylistheaders:2.5.0'
 
     compile project(':lib-core')
-    compile project(':lib-core-slh')
-    compile project(':lib-manipulation')
+//    compile project(':lib-core-slh')
+//    compile project(':lib-manipulation')
 }
 
