--- a/example/build.gradle
+++ b/example/build.gradle
@@ -49,13 +49,9 @@ android {
 }
 
 dependencies {
-
-    provided 'com.android.support:support-annotations:23.1.0'
-    compile 'com.android.support:support-v4:23.1.0'
-    compile 'se.emilsjolander:stickylistheaders:2.5.0'
-
     compile project(':lib-core')
-//    compile project(':lib-core-slh')
-//    compile project(':lib-manipulation')
+//    provided 'com.android.support:support-annotations:23.1.0'
+//    compile 'com.android.support:support-v4:23.1.0'
+//    compile 'se.emilsjolander:stickylistheaders:2.5.0'
 }
 
