--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
-        versionName "4.1"
+        versionName "4.2"
     }
 
     compileOptions {
@@ -30,6 +30,6 @@ android {
 }
 
 dependencies {
-    provided 'com.android.support:support-annotations:23.1.0'
+    compile 'com.android.support:support-annotations:23.1.0'
     compile 'se.emilsjolander:stickylistheaders:2.5.0'
 }
